# FlagGems

./: .clang-format  .coverage.aibox-rca6206721b6-576cf94457-rlnzf.pid404414.XjStjSlx.HjNOqUhagHIh  .coverage.job-pwc0sqsmj3j2-master-0.pid1208891.XIwgRrex.HQvlmWTrew7h  .coverage.job-pwc0sqsmj3j2-master-0.pid1209120.X3ihPSpx.HQvlmWTrew7h  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .gitreview  .pre-commit-config.yaml  1372-abcdefg  1372-abcdefg-op.job-eb804xemf2w1-master-0.pid16796.Xfbmv1yx.HCozNI070Bnh  1372-abcdefg-op.job-eb804xemf2w1-master-0.pid21488.XnhSfRox.HnhiiDCj9rSh  1372-abcdefg-op.job-eb804xemf2w1-master-0.pid54585.XfnXpZox.HX84Eyvj3eZh  1372-abcdefg-op.job-eb804xemf2w1-master-0.pid55853.XABa8oGx.HFzaC7C2uQzh  1372-abcdefg-op.job-pwc0sqsmj3j2-master-0.pid1209225.X7scmMgx.HQvlmWTrew7h  1372-abcdefg-python-coverage.xml  AGENTS.md  BENCHMARK_STATUS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPLETE_PERFORMANCE_RESULTS.md  CONTRIBUTING.md  CONTRIBUTING_cn.md  COVERAGE.md  DESIGN.md  FINAL_TEST_SUMMARY.md  GCD submission (4).csv  GCD testing  MAINTAINERS.md  MEDIAN_CURRENT_STATUS.md  MEDIAN_FINAL_TEST_RESULTS.md  MEDIAN_HYBRID_TEST_RESULTS.md  MEDIAN_MINIMAL_FAILURE_CASE.md  MEDIAN_ORDERED_KEY_RESULTS.md  MEDIAN_STABLE_ARGSORT_RESULTS.md  MEDIAN_TEST_RESULTS.md  MEDIAN_TEST_STATUS.md  (+120 more)
.claude/: settings.local.json
.devcontainer/: README.md  README_CN.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.name_plan/: __ixor__.json  adaptive_max_pool3d_backward.json  lcm_.json
GatedDeltaNet/: Dockerfile  LICENSE  README.md  cache.py
benchmark/: .test_bernoulli.py.swp  attri_util.py  base.py  bench_avg_pool3d.py  bench_cosh_pointwise.py  bench_easy_ops.py  bench_log10_pointwise.py  bench_logaddexp_pointwise.py  bench_medium_ops.py  benchmark_for_models.py  benchmark_fused_moe.py  benchmark_log10.py  benchmark_max_pool3d.py  benchmark_topk_softplus_sqrt.py  conftest.py  consts.py  core_shapes.yaml  performance_utils.py  segment_reduce.yaml  summary_for_plot.py  test_AdaptiveAttentionSpan.py  test_BeamSearchScore.py  test_Concat.py  test_CrossAttention.py  test_GRUAttention.py  test_If.py  test_MatMulAdd.py  test_MatmulBiasActivation.py  test_MoELoadBalanceLoss.py  test_Multi_Query_Attention_MQA.py  test_Paged_Attention.py  test_RMSNorm.py  test_Range.py  test__cholesky_solve_helper.py  test__dyn_quant_pack_4bit_weight.py  test__embedding_bag_dense_backward.py  test__euclidean_dist.py  test__scaled_dot_product_attention_math.py  test_acos_.py  test_acosh.py  (+507 more)
cmake/: BackendKunlunxin.cmake  BackendMUSA.cmake  BackendNPU.cmake  Config.cmake.in  FindTorch.cmake
competition/: calculate_competition_score.py  task_query.py  task_resolver.py  tasks.yaml  test-competition-benchmark.sh  upload_score.py
conf/: .operator.yaml.swl  .operator.yaml.swm  .operator.yaml.swn  .operator.yaml.swp  operators.yaml
container/: configs.yaml  containerfile  containerfile.nvidia  flaggems-hygon-26.04  flaggems-tsingmicro-260614
cpp/: CMakeLists.txt
ctests/: CMakeLists.txt  test_triton_add.cpp  test_triton_addmm.cpp  test_triton_argmax.cpp  test_triton_blas.cpp  (+23 more)
lib/: add.cpp  (+35 more)
(+20456 files in other folders)
